--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +56,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 0 20%;
+            margin: 0 20%;
         }
 
         .title {
@@ -85,6 +84,17 @@
         h3 {
             margin-left: -1rem;
         }
+        
+        @media screen and (max-width: 760px) {
+            header {
+                padding: 0;
+            }
+
+            .container,
+            .title {
+                margin: 0;
+            }
+        }
     </style>
 </head>
 
@@ -107,7 +117,10 @@
         </div>
         <p>
             <b>
-                <i>Ikigai is a Japanese concept that roughly translates to "a reason for being" or "a reason to wake up in the morning." It encompasses finding joy, purpose, and fulfillment in life. The concept suggests that by identifying and nurturing the intersection of four elements, individuals can lead a fulfilling and meaningful life. These elements are:
+                <i>Ikigai is a Japanese concept that roughly translates to "a reason for being" or "a reason to wake up
+                    in the morning." It encompasses finding joy, purpose, and fulfillment in life. The concept suggests
+                    that by identifying and nurturing the intersection of four elements, individuals can lead a
+                    fulfilling and meaningful life. These elements are:
                 </i>
             </b>
         </p>
@@ -144,11 +157,10 @@
                         purpose-driven life that integrates personal fulfillment with societal contribution and
                         financial stability. By living in alignment with their ikigai individuals can experience a sense
                         of meaning, satisfaction, and longevity.
-                    <u>
+                        <u>
                 </h3>
             </li>
         </ol>
     </div>
 </body>
-
 </html>
